Add collect for any Collector, Remove collectToList and collectToSet